--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,11 @@
   "description": "A strict and basic json parser",
   "type": "library",
   "license": "MIT",
+  "config": {
+    "platform": {
+      "php": "^7.1.0"
+    }
+  },
   "require-dev": {
     "phpunit/phpunit": "^8.0",
     "infection/infection": "^0.13.0",
